# LLM_DeepEvolve

./: .env  .gitignore  config.py  main.py  prompts.yaml  pyproject.toml
GA/: NSGA.py  SPEA.py  genetic_algorithm.py  individuals.py
LLM/: agent.py
neural_net/: dataset.py  network.py
pipelines/: pipelines.py  utils.py
prompts/: constraints.yml  crossover.yml  errors.yml  expert_roles.yml  mutation.yml  premise.yml  repair_full_genome.yml
